chore: add panama ffm apis to common module